--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,7 @@ dependencies = [
     "requests>=2.32.3",
 ]
 
-[
-project.optional-dependencies
-]
+[project.optional-dependencies]
 dev = [
     "pytest>=6.0",
     "pytest-cov>=2.12.0",
